ARCH-143 fix sidebar horizontal scrolling

--- a/apps/meteor/app/theme/client/imports/general/base_old.css
+++ b/apps/meteor/app/theme/client/imports/general/base_old.css
@@ -1176,7 +1176,7 @@
 	}
 }
 
-.message {
+.rcx-message {
 	position: relative;
 	z-index: 1;
 
